--- a/RMISWeb/RDL_BagPaymentReport.rdlc
+++ b/RMISWeb/RDL_BagPaymentReport.rdlc
@@ -430,7 +430,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>BagPayment</DataSetName>
-        <Top>0.3175in</Top>
+        <Top>0.19444in</Top>
         <Left>0.19792in</Left>
         <Height>0.54167in</Height>
         <Width>6.23959in</Width>
@@ -450,6 +450,55 @@
   </Body>
   <Width>11.55917in</Width>
   <Page>
+    <PageHeader>
+      <Height>0.86458in</Height>
+      <PrintOnFirstPage>true</PrintOnFirstPage>
+      <PrintOnLastPage>true</PrintOnLastPage>
+      <ReportItems>
+        <Textbox Name="Textbox2">
+          <CanGrow>true</CanGrow>
+          <KeepTogether>true</KeepTogether>
+          <Paragraphs>
+            <Paragraph>
+              <TextRuns>
+                <TextRun>
+                  <Value>Bag Payment Report</Value>
+                  <Style>
+                    <FontFamily>Shruti</FontFamily>
+                    <FontSize>22pt</FontSize>
+                    <FontWeight>Bold</FontWeight>
+                    <TextDecoration>Underline</TextDecoration>
+                    <Color>CornflowerBlue</Color>
+                  </Style>
+                </TextRun>
+              </TextRuns>
+              <Style>
+                <TextAlign>Center</TextAlign>
+              </Style>
+            </Paragraph>
+          </Paragraphs>
+          <rd:DefaultName>Textbox2</rd:DefaultName>
+          <Top>0.27292in</Top>
+          <Left>0.73271in</Left>
+          <Height>0.52083in</Height>
+          <Width>4.98958in</Width>
+          <Style>
+            <Border>
+              <Style>None</Style>
+            </Border>
+            <PaddingLeft>2pt</PaddingLeft>
+            <PaddingRight>2pt</PaddingRight>
+            <PaddingTop>2pt</PaddingTop>
+            <PaddingBottom>2pt</PaddingBottom>
+          </Style>
+        </Textbox>
+      </ReportItems>
+      <Style>
+        <Border>
+          <Style>None</Style>
+        </Border>
+      </Style>
+    </PageHeader>
     <LeftMargin>1in</LeftMargin>
     <RightMargin>1in</RightMargin>
     <TopMargin>1in</TopMargin>
